<resources>
    <string name="app_name">UniProject</string>
    <string name="login_title">Prijava bibliotekara</string>
    <string name="login_subtitle">Prijavite se da biste upravljali bibliotekom.</string>
    <string name="login_username_label">Korisničko ime</string>
    <string name="login_password_label">Lozinka</string>
    <string name="login_action">Prijavi se</string>
    <string name="login_loading">Prijava je u toku</string>
    <string name="login_username_required">Unesite korisničko ime.</string>
    <string name="login_password_required">Unesite lozinku.</string>
    <string name="login_success">Uspešno ste se prijavili kao %1$s.</string>
    <string name="login_no_account">Nemate nalog?</string>
    <string name="login_open_registration">Registrujte se</string>
    <string name="logout_action">Odjavi se</string>
    <string name="logout_success">Uspešno ste se odjavili.</string>
    <string name="session_expired">Sesija je istekla. Prijavite se ponovo.</string>
    <string name="register_title">Registracija bibliotekara</string>
    <string name="register_subtitle">Napravite nalog za pristup bibliotečkom sistemu.</string>
    <string name="register_username_label">Korisničko ime</string>
    <string name="register_email_label">Email adresa</string>
    <string name="register_full_name_label">Ime i prezime (opciono)</string>
    <string name="register_password_label">Lozinka</string>
    <string name="register_action">Registruj se</string>
    <string name="register_loading">Registracija je u toku</string>
    <string name="register_username_required">Unesite korisničko ime.</string>
    <string name="register_username_length">Korisničko ime mora imati od 3 do 100 znakova.</string>
    <string name="register_email_required">Unesite email adresu.</string>
    <string name="register_email_invalid">Unesite ispravnu email adresu.</string>
    <string name="register_email_length">Email adresa može imati najviše 150 znakova.</string>
    <string name="register_password_required">Unesite lozinku.</string>
    <string name="register_password_length">Lozinka mora imati od 6 do 100 znakova.</string>
    <string name="register_full_name_length">Ime i prezime mogu imati najviše 150 znakova.</string>
    <string name="register_success">Registracija je uspešna. Sada se prijavite.</string>
    <string name="register_has_account">Već imate nalog?</string>
    <string name="register_back_to_login">Vratite se na prijavu</string>
    <string name="authors_title">Autori</string>
    <string name="authors_loading">Učitavanje autora</string>
    <string name="authors_empty">Nema evidentiranih autora.</string>
    <string name="authors_load_failed">Autore trenutno nije moguće učitati.</string>
    <string name="author_biography_missing">Biografija nije uneta.</string>
    <string name="add_author_action">Dodaj autora</string>
    <string name="create_author_title">Novi autor</string>
    <string name="author_first_name_label">Ime</string>
    <string name="author_last_name_label">Prezime</string>
    <string name="author_biography_label">Biografija (opciono)</string>
    <string name="author_first_name_required">Unesite ime autora.</string>
    <string name="author_last_name_required">Unesite prezime autora.</string>
    <string name="author_name_length">Ime i prezime mogu imati najviše 100 znakova.</string>
    <string name="author_create_action">Sačuvaj</string>
    <string name="author_create_loading">Čuvanje autora je u toku</string>
    <string name="author_create_success">Autor %1$s je dodat.</string>
    <string name="author_create_failed">Autor trenutno ne može biti sačuvan.</string>
    <string name="edit_author_action">Izmeni autora</string>
    <string name="edit_author_content_description">Izmeni autora %1$s</string>
    <string name="edit_author_title">Izmena autora</string>
    <string name="author_update_success">Autor %1$s je izmenjen.</string>
    <string name="delete_author_action">Obriši autora</string>
    <string name="delete_author_content_description">Obriši autora %1$s</string>
    <string name="delete_author_title">Brisanje autora</string>
    <string name="delete_author_confirmation">Da li sigurno želite da obrišete autora %1$s?</string>
    <string name="author_delete_success">Autor %1$s je obrisan.</string>
    <string name="author_delete_failed">Autor trenutno ne može biti obrisan.</string>
    <string name="cancel_action">Otkaži</string>
    <string name="retry_action">Pokušaj ponovo</string>
    <string name="categories_title">Kategorije</string>
    <string name="categories_description">Pregled i upravljanje kategorijama knjiga.</string>
    <string name="categories_loading">Učitavanje kategorija</string>
    <string name="categories_empty">Nema evidentiranih kategorija.</string>
    <string name="categories_load_failed">Kategorije trenutno nije moguće učitati.</string>
    <string name="category_description_missing">Opis nije unet.</string>
    <string name="add_category_action">Dodaj kategoriju</string>
    <string name="create_category_title">Nova kategorija</string>
    <string name="category_name_label">Naziv</string>
    <string name="category_description_label">Opis (opciono)</string>
    <string name="category_name_required">Unesite naziv kategorije.</string>
    <string name="category_name_length">Naziv kategorije može imati najviše 100 znakova.</string>
    <string name="category_name_duplicate">Kategorija sa ovim nazivom već postoji.</string>
    <string name="category_create_action">Sačuvaj</string>
    <string name="category_create_loading">Čuvanje kategorije je u toku</string>
    <string name="category_create_success">Kategorija %1$s je dodata.</string>
    <string name="category_create_failed">Kategorija trenutno ne može biti sačuvana.</string>
    <string name="edit_category_action">Izmeni kategoriju</string>
    <string name="edit_category_content_description">Izmeni kategoriju %1$s</string>
    <string name="edit_category_title">Izmena kategorije</string>
    <string name="category_update_success">Kategorija %1$s je izmenjena.</string>
    <string name="delete_category_action">Obriši kategoriju</string>
    <string name="delete_category_content_description">Obriši kategoriju %1$s</string>
    <string name="delete_category_title">Brisanje kategorije</string>
    <string name="delete_category_confirmation">Da li sigurno želite da obrišete kategoriju %1$s?</string>
    <string name="category_delete_success">Kategorija %1$s je obrisana.</string>
    <string name="category_delete_failed">Kategorija trenutno ne može biti obrisana.</string>
    <string name="books_title">Knjige</string>
    <string name="books_description">Pregled, pretraga i upravljanje bibliotečkim fondom.</string>
    <string name="book_title_missing">Knjiga bez naslova</string>
    <string name="book_value_missing">Nije navedeno</string>
    <string name="book_metadata_value">ISBN: %1$s · Godina izdanja: %2$s</string>
    <string name="book_author_value">Autor: %1$s</string>
    <string name="book_category_value">Kategorija: %1$s</string>
    <string name="book_author_missing">Autor nije pronađen</string>
    <string name="book_category_missing">Kategorija nije pronađena</string>
    <string name="book_availability_value">Dostupno: %1$d od %2$d</string>
    <string name="edit_book_action">Izmeni knjigu</string>
    <string name="edit_book_content_description">Izmeni knjigu %1$s</string>
    <string name="delete_book_action">Obriši knjigu</string>
    <string name="delete_book_content_description">Obriši knjigu %1$s</string>
    <string name="books_search_hint">Pretražite po naslovu, autoru, kategoriji ili ISBN-u</string>
    <string name="books_search_action">Pretraži knjige</string>
    <string name="books_loading">Učitavanje knjiga</string>
    <string name="books_empty">Nema evidentiranih knjiga.</string>
    <string name="books_search_empty">Nema knjiga koje odgovaraju pretrazi.</string>
    <string name="books_load_failed">Knjige trenutno nije moguće učitati.</string>
    <string name="add_book_action">Dodaj knjigu</string>
    <string name="create_book_title">Nova knjiga</string>
    <string name="edit_book_title">Izmena knjige</string>
    <string name="book_title_label">Naslov</string>
    <string name="book_isbn_label">ISBN</string>
    <string name="book_publication_year_label">Godina izdanja</string>
    <string name="book_total_copies_label">Ukupan broj primeraka</string>
    <string name="book_author_label">Autor</string>
    <string name="book_category_label">Kategorija</string>
    <string name="book_title_required">Unesite naslov knjige.</string>
    <string name="book_title_length">Naslov može imati najviše 255 znakova.</string>
    <string name="book_isbn_required">Unesite ISBN knjige.</string>
    <string name="book_isbn_length">ISBN može imati najviše 20 znakova.</string>
    <string name="book_isbn_duplicate">Knjiga sa ovim ISBN brojem već postoji.</string>
    <string name="book_publication_year_required">Unesite godinu izdanja.</string>
    <string name="book_publication_year_invalid">Unesite ispravnu godinu izdanja.</string>
    <string name="book_total_copies_required">Unesite ukupan broj primeraka.</string>
    <string name="book_total_copies_invalid">Unesite ispravan ukupan broj primeraka.</string>
    <string name="book_total_copies_minimum">Ukupan broj primeraka ne može biti negativan.</string>
    <string name="book_author_required">Izaberite autora.</string>
    <string name="book_category_required">Izaberite kategoriju.</string>
    <string name="book_save_action">Sačuvaj</string>
    <string name="book_save_loading">Čuvanje knjige je u toku</string>
    <string name="book_create_success">Knjiga %1$s je dodata.</string>
    <string name="book_update_success">Knjiga %1$s je izmenjena.</string>
    <string name="book_save_failed">Knjiga trenutno ne može biti sačuvana.</string>
    <string name="book_reference_data_failed">Autore i kategorije trenutno nije moguće učitati.</string>
    <string name="delete_book_title">Brisanje knjige</string>
    <string name="delete_book_confirmation">Da li sigurno želite da obrišete knjigu %1$s?</string>
    <string name="book_delete_success">Knjiga %1$s je obrisana.</string>
    <string name="book_delete_failed">Knjiga trenutno ne može biti obrisana.</string>
    <string name="members_title">Članovi</string>
    <string name="members_description">Pregled i upravljanje članovima biblioteke.</string>
    <string name="members_loading">Učitavanje članova</string>
    <string name="members_empty">Nema evidentiranih članova.</string>
    <string name="members_load_failed">Članove trenutno nije moguće učitati.</string>
    <string name="add_member_action">Dodaj člana</string>
    <string name="create_member_title">Novi član</string>
    <string name="edit_member_title">Izmena člana</string>
    <string name="member_first_name_label">Ime</string>
    <string name="member_last_name_label">Prezime</string>
    <string name="member_card_number_label">Broj članske karte</string>
    <string name="member_email_label">Email</string>
    <string name="member_phone_label">Telefon (opciono)</string>
    <string name="member_first_name_required">Unesite ime člana.</string>
    <string name="member_last_name_required">Unesite prezime člana.</string>
    <string name="member_name_length">Ime i prezime mogu imati najviše 100 znakova.</string>
    <string name="member_card_number_required">Unesite broj članske karte.</string>
    <string name="member_card_number_length">Broj članske karte može imati najviše 50 znakova.</string>
    <string name="loans_title">Zaduženja</string>
    <string name="loans_filter_all">Sva zaduženja</string>
    <string name="loans_filter_overdue">Zakasnela</string>
    <string name="loans_loading">Učitavanje zaduženja</string>
    <string name="loans_empty">Nema evidentiranih zaduženja.</string>
    <string name="add_loan_action">Zaduži knjigu</string>
</resources>